--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
-					<img class="info-header__icon" src="img/icons/check-icon.png" loading="lazy"></img>
+					<img class="info-header__icon" src="img/icons/check-icon.png" alt="" loading="lazy">
 					<div class="info-header__text">работаем <span>24 / 7</span></div>
 				</div>
 				<div class="info-header__item info-header__item_region">
-					<img class="info-header__icon" src="img/icons/address-icon.png" loading="lazy"></img>
+					<img class="info-header__icon" src="img/icons/address-icon.png" alt="" loading="lazy">
 					<a href="#city" class="info-header__text _popup-link">Выбрать регион</a>
 				</div>
 			</div>
@@ -35,7 +35,7 @@
 					<a href="tel:+79581117219" class="info-header__text">+7{(958)111-7-219}</a>
 				</div>
 				<div class="info-header__item info-header__item_callback">
-					<img class="info-header__icon" src="img/icons/callback-icon.png" loading="lazy"></img>
+					<img class="info-header__icon" src="img/icons/callback-icon.png" alt="" loading="lazy">
 					<a href="#callback" class="info-header__text _popup-link">Обратный звонок</a>
 				</div>
 			</div>
@@ -460,7 +460,6 @@
 									<p class="item-steps__text">- Замеряем уровень глюкозы, чтобы исключить сахарный диабет и определиться с тем, вводить глюкозу или нет;</p>
 									<p class="item-steps__text">- Замеряем уровень кислорода крови, чтобы исключить острые патологии (гипоксию и др.);</p>
 									<p class="item-steps__text">- Проводим тщательный терапевтический осмотр, чтобы иметь полную картину состояния, оценить риски и грамотно подобрать препараты для выхода из запоя.</p>
-									</ul>
 								</div>
 								<div class="steps__item steps__item_2 item-steps">
 									<h3 class="item-steps__title">Состояние пациента приходит в норму</h3>
@@ -485,7 +484,6 @@
 								<p class="item-steps__text">- Замеряем уровень глюкозы, чтобы исключить сахарный диабет и определиться с тем, вводить глюкозу или нет;</p>
 								<p class="item-steps__text">- Замеряем уровень кислорода крови, чтобы исключить острые патологии (гипоксию и др.);</p>
 								<p class="item-steps__text">- Проводим тщательный терапевтический осмотр, чтобы иметь полную картину состояния, оценить риски и грамотно подобрать препараты для выхода из запоя.</p>
-								</ul>
 							</div>
 							<div class="steps__item item-steps">
 								<h3 class="item-steps__title"><span class="item-steps__title_num">4</span>Вводим снотворное, ставим капельницу</h3>
@@ -611,11 +609,11 @@
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
-					<img class="info-header__icon" src="img/icons/check-icon.png" loading="lazy"></img>
+					<img class="info-header__icon" src="img/icons/check-icon.png" alt="" loading="lazy">
 					<div class="info-header__text">работаем <span>24 / 7</span></div>
 				</div>
 				<div class="info-header__item info-header__item_region">
-					<img class="info-header__icon" src="img/icons/mail-icon.png" loading="lazy"></img>
+					<img class="info-header__icon" src="img/icons/mail-icon.png" alt="" loading="lazy">
 					<a href="mailto:medusluga@gmail.com" class="info-header__text">medusluga@gmail.com</a>
 				</div>
 			</div>
@@ -624,7 +622,7 @@
 					<a href="tel:+79581117219" class="info-header__text">+7{(958)111-7-219}</a>
 				</div>
 				<div class="info-header__item info-header__item_callback">
-					<img class="info-header__icon" src="img/icons/callback-icon.png" loading="lazy"></img>
+					<img class="info-header__icon" src="img/icons/callback-icon.png" alt="" loading="lazy">
 					<a href="#callback" class="info-header__text _popup-link">Обратный звонок</a>
 				</div>
 			</div>
@@ -738,7 +736,7 @@
 		</div>
 	</div>
 </div>
-		<script src="js/vendors.js"></script>
-<script src="js/app.js"></script>
+		<script src="js/vendors.min.js"></script>
+<script src="js/app.min.js"></script>
 	</body>
 </html>
