--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="keywords" content="выведение, запой, на дому, Med24.online, выезд, круглосуточно, недорого, анонимно, нарколог">
 	<meta name="description" content="Вывод из запоя на дому в вашем городе. Капельница. Гарантируем анонимность и результат. Делаем предварительную диагностику: ЭКГ, глюкозу и др.">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="preload" href="fonts/PTSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/PTSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/FiraSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/FiraSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -736,7 +739,7 @@
 		</div>
 	</div>
 </div>
-		<script src="js/vendors.min.js"></script>
-<script src="js/app.min.js"></script>
+		<script defer src="js/vendors.min.js"></script>
+<script defer src="js/app.min.js"></script>
 	</body>
 </html>
