--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<link rel="preload" href="fonts/PTSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/FiraSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/FiraSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/PTSans-Bold.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="fonts/PTSans-Regular.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="fonts/FiraSans-Bold.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="fonts/FiraSans-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
