--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 		</div>
 	</div>
 </div>
-		<script async src="js/vendors.min.js"></script>
-<script async src="js/app.min.js"></script>
+		<script defer src="js/vendors.min.js"></script>
+<script defer src="js/app.min.js"></script>
 	</body>
 </html>
