--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
-	<link rel="stylesheet" href="css/header.min.css">
-	<link rel="preload" as="style" href="css/style.min.css">
-	<link rel="stylesheet" href="css/style.min.css" media="print" onload="this.media='all'">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
