--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
-					<img class="info-header__icon" src="img/icons/check-icon.png" alt="">
+					<span class="info-header__icon"></span>
 					<div class="info-header__text">работаем <span>24 / 7</span></div>
 				</div>
 				<div class="info-header__item info-header__item_region">
-					<img class="info-header__icon" src="img/icons/address-icon.png" alt="">
+					<span class="info-header__icon"></span>
 					<a href="#city" class="info-header__text _popup-link">Выбрать регион</a>
 				</div>
 			</div>
@@ -37,7 +37,7 @@
 					<a href="tel:+79581117219" class="info-header__text">+7{(958)111-7-219}</a>
 				</div>
 				<div class="info-header__item info-header__item_callback">
-					<img class="info-header__icon" src="img/icons/callback-icon.png" alt="">
+					<span class="info-header__icon"></span>
 					<a href="#callback" class="info-header__text _popup-link">Обратный звонок</a>
 				</div>
 			</div>
@@ -79,15 +79,15 @@
 					<div class="_container">
 						<ul class="info__list">
 							<li>
-								<img class="info__icon lazy" data-src="img/icons/top-icon1.png" src="" alt="">
+								<span class="info__icon info__icon_1"></span>
 								<p class="info__text">Есть лицензия</p>
 							</li>
 							<li>
-								<img class="info__icon lazy" data-src="img/icons/top-icon2.png" src="" alt="">
+								<span class="info__icon info__icon_2"></span>
 								<p class="info__text">Выведем за 1 приезд</p>
 							</li>
 							<li>
-								<img class="info__icon lazy" data-src="img/icons/top-icon3.png" src="" alt="">
+								<span class="info__icon info__icon_3"></span>
 								<p class="info__text">Гражданская одежда</p>
 							</li>
 						</ul>
@@ -105,7 +105,7 @@
 							<div class="page-form__content">
 								<h2 class="page-form__title section__title">Вывод из <br class="page-form__br"> запоя на дому <br> {вашем городе}.<br class="page-form__br"> Звоните!</h2>
 								<div class="page-form__subtitle">
-									<img data-src="img/icons/check-icon.png" src="" alt="" class="lazy">
+									<div class="page-form__subtitle_icon"></div>
 									<p>Круглосуточно!<br class="page-form__br"> Доступные цены!</p>
 								</div>
 								<a href="#callback" class="page-form__button btn _popup-link"><span>Вызвать врача на дом</span></a>
@@ -238,7 +238,7 @@
 							<div class="page-form__content">
 								<h2 class="page-form__title section__title">Вывод из <br class="page-form__br"> запоя на дому <br> {вашем городе}.<br class="page-form__br"> Круглосуточно!</h2>
 								<div class="page-form__subtitle">
-									<img data-src="img/icons/check-icon.png" src="" alt="" class="lazy">
+									<div class="page-form__subtitle_icon"></div>
 									<p>Капельница от запоя!<br class="page-form__br"> Доступная цена!</p>
 								</div>
 								<a href="#callback" class="page-form__button btn _popup-link"><span>Вызвать врача на дом</span></a>
@@ -272,99 +272,99 @@
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Терапевтический осмотр</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></span></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></span></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></span></div>
 								</div>
 								<div class="table-price__row">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">ЭКГ</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row table-price__row_blue">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Глюкозометрия</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Пульсоксиметрия</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row table-price__row_blue">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Очищающая капельница 800-1500 мл</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Назначения для быстрого восстановления</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row table-price__row_blue">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Ноотропы</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-minus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__minus"></span></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Связь с наркологом по телефону</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-minus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__minus"></span></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row table-price__row_blue">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Гепатопротекторы</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-minus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-minus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__minus"></span></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__minus"></span></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Антиоксиданты</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-minus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__minus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row table-price__row_blue">
 									<div class="table-price__column table-price__column_1">
 										<span class="table-price__icon"></span>
 										<span class="table-price__name">Снотворное</span>
 									</div>
-									<div class="table-price__column table-price__column_2 active"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_3"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
-									<div class="table-price__column table-price__column_4"><img data-src="img/icons/table-plus.png" src="" alt="" class="lazy"></div>
+									<div class="table-price__column table-price__column_2 active"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_3"><span class="table-price__plus"></div>
+									<div class="table-price__column table-price__column_4"><span class="table-price__plus"></div>
 								</div>
 								<div class="table-price__row">
 									<div class="table-price__column table-price__column_1"></div>
@@ -632,11 +632,11 @@
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
-					<img class="info-header__icon lazy" data-src="img/icons/check-icon.png" src="" alt="">
+					<span class="info-header__icon"></span>
 					<div class="info-header__text">работаем <span>24 / 7</span></div>
 				</div>
-				<div class="info-header__item info-header__item_region">
-					<img class="info-header__icon lazy" data-src="img/icons/mail-icon.png" src="" alt="">
+				<div class="info-header__item info-header__item_region info-header__item_mail">
+					<span class="info-header__icon"></span>
 					<a href="mailto:medusluga@gmail.com" class="info-header__text">medusluga@gmail.com</a>
 				</div>
 			</div>
@@ -645,7 +645,7 @@
 					<a href="tel:+79581117219" class="info-header__text">+7{(958)111-7-219}</a>
 				</div>
 				<div class="info-header__item info-header__item_callback">
-					<img class="info-header__icon lazy" data-src="img/icons/callback-icon.png" src="" alt="">
+					<span class="info-header__icon"></span>
 					<a href="#callback" class="info-header__text _popup-link">Обратный звонок</a>
 				</div>
 			</div>
