--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header class="header">
 	<div class="header__content _container">
 		<a href="/" class="header__logo">
-			<img src="img/logo.webp" alt="">
+			<img data-src="img/logo.webp" src="" alt="" class="lazy">
 		</a>
 		<div class="header__slogan">Медицинская помощь <span>на дому и в клинике</span><br> {вашем городе}</div>
 		<div class="header__info info-header">
