--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 				<!--preview start-->
 				<section class="preview">
 					<div class="_container">
-						<h1 class="preview__title">Вывод из запоя <br><span>на дому</span> вашем городе</h1>
+						<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> вашем городе</h1>
 						<p class="preview__text">Будем в течение 1 часа!</p>
 						<ul class="preview__list">
-							<li>Доступные цены</li>
-							<li>100% анонимность</li>
-							<li>Круглосуточно</li>
+							<li class="preview__listelem">Доступные цены</li>
+							<li class="preview__listelem">100% анонимность</li>
+							<li class="preview__listelem">Круглосуточно</li>
 						</ul>
 					</div>
 				</section>
