--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<section class="preview">
 					<div class="_container">
 						<!--<img data-src="img/top-screen-mobile-small.webp" src="" alt="" class="preview__bg lazy">-->
-						<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> вашем городе</h1>
+						<!--<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> вашем городе</h1>-->
 						<p class="preview__text">Будем в течение 1 часа!</p>
 						<ul class="preview__list">
 							<li class="preview__listelem">Доступные цены</li>
