--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a href="/" class="header__logo">
 			<img data-src="img/logo.webp" src="" alt="" class="lazy">
 		</a>
-		<div class="header__slogan">Медицинская помощь <span>на дому и в клинике</span><br> {вашем городе}</div>
+		<!--<div class="header__slogan">Медицинская помощь <span>на дому и в клинике</span><br> {вашем городе}</div>-->
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
