--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a href="/" class="header__logo">
 			<img data-src="img/logo.webp" src="" alt="" class="lazy">
 		</a>
-		<!--<div class="header__slogan">Медицинская помощь <span>на дому и в клинике</span><br> {вашем городе}</div>-->
+		<div class="header__slogan">Медицинская помощь <span>на дому и в клинике</span><br> {вашем городе}</div>
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
@@ -63,9 +63,8 @@
 				<!--preview start-->
 				<section class="preview">
 					<div class="_container">
-						<!--<img data-src="img/top-screen-mobile-small.webp" src="" alt="" class="preview__bg lazy">-->
-						<!--<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> вашем городе</h1>-->
-						<!--<p class="preview__text">Будем в течение 1 часа!</p>-->
+						<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> вашем городе</h1>
+						<p class="preview__text">Будем в течение 1 часа!</p>
 						<ul class="preview__list">
 							<li class="preview__listelem">Доступные цены</li>
 							<li class="preview__listelem">100% анонимность</li>
