--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="keywords" content="выведение, запой, на дому, Med24.online, выезд, круглосуточно, недорого, анонимно, нарколог">
 	<meta name="description" content="Вывод из запоя на дому в вашем городе. Капельница. Гарантируем анонимность и результат. Делаем предварительную диагностику: ЭКГ, глюкозу и др.">
-	<!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">-->
-	<link rel="preload" href="fonts/FiraSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
+	<!--<link rel="preload" href="fonts/FiraSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/FiraSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/PTSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/PTSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/FiraSans-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FiraSans-Bold.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/PTSans-Regular.woff" as="font" type="font/woff" crossorigin>
-	<link rel="preload" href="fonts/PTSans-Bold.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="fonts/PTSans-Bold.woff" as="font" type="font/woff" crossorigin>-->
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
