--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<a href="/" class="header__logo">
 			<img data-src="img/logo.webp" src="" alt="" class="lazy">
 		</a>
-		<div class="header__slogan">Медицинская помощь <span>на дому и в клинике</span><br> {вашем городе}</div>
+		<div class="header__slogan">Медицинская помощь <b>на дому и в клинике</b><br> <span class="cityName">вашем городе</span></div>
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
@@ -42,7 +42,7 @@
 			</div>
 			<div class="info-header__column info-header__column_2">
 				<div class="info-header__item info-header__item_phone">
-					<a href="tel:+79581117219" class="info-header__text">+7{(958)111-7-219}</a>
+					<a href="tel:+79581117219" class="info-header__text phoneCity">+7(958)111-7-219</a>
 				</div>
 				<div class="info-header__item info-header__item_callback">
 					<span class="info-header__icon"></span>
@@ -111,13 +111,13 @@
 								<img data-src="img/page-form/doctor1.webp" src="" alt="" class="lazy">
 							</div>
 							<div class="page-form__content">
-								<h2 class="page-form__title section__title">Вывод из <br class="page-form__br"> запоя на дому <br> {вашем городе}.<br class="page-form__br"> Звоните!</h2>
+								<h2 class="page-form__title section__title">Вывод из <br class="page-form__br"> запоя на дому <br> <span class="cityName">вашем городе</span>.<br class="page-form__br"> Звоните!</h2>
 								<div class="page-form__subtitle">
 									<div class="page-form__subtitle_icon"></div>
 									<p>Круглосуточно!<br class="page-form__br"> Доступные цены!</p>
 								</div>
 								<a href="#callback" class="page-form__button btn _popup-link"><span>Вызвать врача на дом</span></a>
-								<div class="page-form__note">Или позвоните<br class="page-form__br"> <span>+7{(958)111-7-219}</span></div>
+								<div class="page-form__note">Или позвоните<br class="page-form__br"> <a class="phoneCity" href="tel:+79581117219">+7(958)111-7-219</a></div>
 							</div>
 							<div class="page-form__image page-form__image_2">
 								<img data-src="img/page-form/label-anon.webp" src="" alt="" class="lazy">
@@ -244,13 +244,13 @@
 								<img data-src="img/page-form/doctor2.webp" src="" alt="" class="lazy">
 							</div>
 							<div class="page-form__content">
-								<h2 class="page-form__title section__title">Вывод из <br class="page-form__br"> запоя на дому <br> {вашем городе}.<br class="page-form__br"> Круглосуточно!</h2>
+								<h2 class="page-form__title section__title">Вывод из <br class="page-form__br"> запоя на дому <br> <span class="cityName">вашем городе</span>.<br class="page-form__br"> Круглосуточно!</h2>
 								<div class="page-form__subtitle">
 									<div class="page-form__subtitle_icon"></div>
 									<p>Капельница от запоя!<br class="page-form__br"> Доступная цена!</p>
 								</div>
 								<a href="#callback" class="page-form__button btn _popup-link"><span>Вызвать врача на дом</span></a>
-								<div class="page-form__note">Или позвоните<br class="page-form__br"> <span>+7{(958)111-7-219}</span></div>
+								<div class="page-form__note">Или позвоните<br class="page-form__br"> <a class="phoneCity" href="tel:+79581117219">+7(958)111-7-219</a></div>
 							</div>
 							<div class="page-form__image page-form__image_2">
 								<img data-src="img/page-form/label-anon2.webp" src="" alt="" class="lazy">
@@ -263,7 +263,7 @@
 				<!--price start-->
 				<section class="price">
 					<div class="_container">
-						<h2 class="price__title section__title">Сколько стоят наши услуги {вашем городе}</h2>
+						<h2 class="price__title section__title">Сколько стоят наши услуги <span class="cityName">вашем городе</span></h2>
 						<div class="price__subtitle">Внимание! Цены действительны в вашем городе. <br>По районам цена рассчитывается в зависимости от км.</div>
 						<div class="price__table table-price">
 							<div class="table-price__head">
@@ -453,7 +453,7 @@
 							<div class="steps__column">
 								<div class="steps__item item-steps">
 									<h3 class="item-steps__title">Вызываете врача на дом</h3>
-									<p class="item-steps__text">Можете это сделать в любое время. Работаем круглосуточно, без выходных. Вызвать можно прямо на сайте или по тел. <span>+7(958)111-7-219.</span></p>
+									<p class="item-steps__text">Можете это сделать в любое время. Работаем круглосуточно, без выходных. Вызвать можно прямо на сайте или по тел. <a class="phoneCity" href="tel:+79581117219">+7(958)111-7-219</a></p>
 									<a href="#callback" class="steps__button btn _popup-link"><span>Вызвать</span></a>
 								</div>
 								<div class="steps__item steps__item_small item-steps">
@@ -539,9 +539,9 @@
 								<img data-src="img/page-form/doctor3.webp" src="" alt="" class="lazy">
 							</div>
 							<div class="page-form__content">
-								<h2 class="page-form__title section__title"><span>Внимание!</span><br class="page-form__br"> При выводе <br class="page-form__br_desc"> из запоя на дому <span>{вашем городе}</span><br class="page-form__br_desc"> скидка на кодирование!</h2>
+								<h2 class="page-form__title section__title"><b>Внимание!</b><br class="page-form__br"> При выводе <br class="page-form__br_desc"> из запоя на дому <span class="cityName">вашем городе</span><br class="page-form__br_desc"> скидка на кодирование!</h2>
 								<a href="#callback" class="page-form__button btn _popup-link"><span>Вызвать врача на дом</span></a>
-								<div class="page-form__note">Или позвоните<br class="page-form__br"> <span>+7{(958)111-7-219}</span></div>
+								<div class="page-form__note">Или позвоните<br class="page-form__br"> <a class="phoneCity" href="tel:+79581117219">+7(958)111-7-219</a></div>
 							</div>
 							<div class="page-form__image page-form__image_2">
 								<img data-src="img/page-form/label-anon3.webp" src="" alt="" class="lazy">
@@ -636,7 +636,7 @@
 		<a href="/" class="header__logo">
 			<img data-src="img/logo.webp" src="" alt="" class="lazy">
 		</a>
-		<div class="header__slogan">Медицинская помощь <span>на дому<br> и в клинике</span> {вашем городе}</div>
+		<div class="header__slogan">Медицинская помощь <b>на дому<br> и в клинике</b> <span class="cityName">вашем городе</span></div>
 		<div class="header__info info-header">
 			<div class="info-header__column info-header__column_1">
 				<div class="info-header__item info-header__item_shedule">
@@ -650,7 +650,7 @@
 			</div>
 			<div class="info-header__column info-header__column_2">
 				<div class="info-header__item info-header__item_phone">
-					<a href="tel:+79581117219" class="info-header__text">+7{(958)111-7-219}</a>
+					<a href="tel:+79581117219" class="info-header__text phoneCity">+7(958)111-7-219</a>
 				</div>
 				<div class="info-header__item info-header__item_callback">
 					<span class="info-header__icon"></span>
@@ -683,71 +683,71 @@
 			<input class="form-popup__input" id="city_choice_field" type="text" name="city_choice" placeholder="Начните вводить название вашего города">
 			<p class="popup__text">или выберите:</p>
 			<ul class="popup__list">
-				<li><a href="#" class="popup__link">Александров</a></li>
-				<li><a href="#" class="popup__link">Андреево</a></li>
-				<li><a href="#" class="popup__link">Астрахань</a></li>
-				<li><a href="#" class="popup__link">Белгород</a></li>
-				<li><a href="#" class="popup__link">Брянск</a></li>
-				<li><a href="#" class="popup__link">Владимир</a></li>
-				<li><a href="#" class="popup__link">Волгоград</a></li>
-				<li><a href="#" class="popup__link">Вологда</a></li>
-				<li><a href="#" class="popup__link">Воронеж</a></li>
-				<li><a href="#" class="popup__link">Гусь Хрустальный</a></li>
-				<li><a href="#" class="popup__link">Евпатория</a></li>
-				<li><a href="#" class="popup__link">Ейск</a></li>
-				<li><a href="#" class="popup__link">Екатеринбург</a></li>
-				<li><a href="#" class="popup__link">Жигулевск</a></li>
-				<li><a href="#" class="popup__link">Иваново</a></li>
-				<li><a href="#" class="popup__link">Иркутск</a></li>
-				<li><a href="#" class="popup__link">Казань</a></li>
-				<li><a href="#" class="popup__link">Калининград (Кенигсберг)</a></li>
-				<li><a href="#" class="popup__link">Камешково</a></li>
-				<li><a href="#" class="popup__link">Киржач</a></li>
-				<li><a href="#" class="popup__link">Киров</a></li>
-				<li><a href="#" class="popup__link">Ковров</a></li>
-				<li><a href="#" class="popup__link">Кольчугино</a></li>
-				<li><a href="#" class="popup__link">Краснодар</a></li>
-				<li><a href="#" class="popup__link">Красноярск</a></li>
-				<li><a href="#" class="popup__link">Липецк</a></li>
-				<li><a href="#" class="popup__link">Луга</a></li>
-				<li><a href="#" class="popup__link">Лыткарино</a></li>
-				<li><a href="#" class="popup__link">Люберцы</a></li>
-				<li><a href="#" class="popup__link">Москва</a></li>
-				<li><a href="#" class="popup__link">Муром</a></li>
-				<li><a href="#" class="popup__link">Набережные Челны</a></li>
-				<li><a href="#" class="popup__link">Новокуйбышевск</a></li>
-				<li><a href="#" class="popup__link">Новороссийск</a></li>
-				<li><a href="#" class="popup__link">Одинцово</a></li>
-				<li><a href="#" class="popup__link">Омск</a></li>
-				<li><a href="#" class="popup__link">Орел</a></li>
-				<li><a href="#" class="popup__link">Оренбург</a></li>
-				<li><a href="#" class="popup__link">Пенза</a></li>
-				<li><a href="#" class="popup__link">Пермь</a></li>
-				<li><a href="#" class="popup__link">Петушки</a></li>
-				<li><a href="#" class="popup__link">Подольск</a></li>
-				<li><a href="#" class="popup__link">Покров</a></li>
-				<li><a href="#" class="popup__link">Радужный (Владимирская обл.)</a></li>
-				<li><a href="#" class="popup__link">Ростов-на-Дону</a></li>
-				<li><a href="#" class="popup__link">Самара</a></li>
-				<li><a href="#" class="popup__link">Санкт-Петербург</a></li>
-				<li><a href="#" class="popup__link">Саратов</a></li>
-				<li><a href="#" class="popup__link">Сергиев Посад</a></li>
-				<li><a href="#" class="popup__link">Собинка</a></li>
-				<li><a href="#" class="popup__link">Судогда</a></li>
-				<li><a href="#" class="popup__link">Суздаль</a></li>
-				<li><a href="#" class="popup__link">Сургут</a></li>
-				<li><a href="#" class="popup__link">Сызрань</a></li>
-				<li><a href="#" class="popup__link">Тамбов</a></li>
-				<li><a href="#" class="popup__link">Тверь</a></li>
-				<li><a href="#" class="popup__link">Тольятти</a></li>
-				<li><a href="#" class="popup__link">Тюмень</a></li>
-				<li><a href="#" class="popup__link">Ханты-Мансийск</a></li>
-				<li><a href="#" class="popup__link">Химки</a></li>
-				<li><a href="#" class="popup__link">Челябинск</a></li>
-				<li><a href="#" class="popup__link">Череповец</a></li>
-				<li><a href="#" class="popup__link">Электросталь</a></li>
-				<li><a href="#" class="popup__link">Юрьев-Польский</a></li>
-				<li><a href="#" class="popup__link">Ярославль</a></li>
+				<li class="popup__link">Александров</li>
+				<li class="popup__link">Андреево</li>
+				<li class="popup__link">Астрахань</li>
+				<li class="popup__link">Белгород</li>
+				<li class="popup__link">Брянск</li>
+				<li class="popup__link">Владимир</li>
+				<li class="popup__link">Волгоград</li>
+				<li class="popup__link">Вологда</li>
+				<li class="popup__link">Воронеж</li>
+				<li class="popup__link">Гусь Хрустальный</li>
+				<li class="popup__link">Евпатория</li>
+				<li class="popup__link">Ейск</li>
+				<li class="popup__link">Екатеринбург</li>
+				<li class="popup__link">Жигулевск</li>
+				<li class="popup__link">Иваново</li>
+				<li class="popup__link">Иркутск</li>
+				<li class="popup__link">Казань</li>
+				<li class="popup__link">Калининград</li>
+				<li class="popup__link">Камешково</li>
+				<li class="popup__link">Киржач</li>
+				<li class="popup__link">Киров</li>
+				<li class="popup__link">Ковров</li>
+				<li class="popup__link">Кольчугино</li>
+				<li class="popup__link">Краснодар</li>
+				<li class="popup__link">Красноярск</li>
+				<li class="popup__link">Липецк</li>
+				<li class="popup__link">Луга</li>
+				<li class="popup__link">Лыткарино</li>
+				<li class="popup__link">Люберцы</li>
+				<li class="popup__link">Москва</li>
+				<li class="popup__link">Муром</li>
+				<li class="popup__link">Набережные Челны</li>
+				<li class="popup__link">Новокуйбышевск</li>
+				<li class="popup__link">Новороссийск</li>
+				<li class="popup__link">Одинцово</li>
+				<li class="popup__link">Омск</li>
+				<li class="popup__link">Орел</li>
+				<li class="popup__link">Оренбург</li>
+				<li class="popup__link">Пенза</li>
+				<li class="popup__link">Пермь</li>
+				<li class="popup__link">Петушки</li>
+				<li class="popup__link">Подольск</li>
+				<li class="popup__link">Покров</li>
+				<li class="popup__link">Радужный</li>
+				<li class="popup__link">Ростов-на-Дону</li>
+				<li class="popup__link">Самара</li>
+				<li class="popup__link">Санкт-Петербург</li>
+				<li class="popup__link">Саратов</li>
+				<li class="popup__link">Сергиев Посад</li>
+				<li class="popup__link">Собинка</li>
+				<li class="popup__link">Судогда</li>
+				<li class="popup__link">Суздаль</li>
+				<li class="popup__link">Сургут</li>
+				<li class="popup__link">Сызрань</li>
+				<li class="popup__link">Тамбов</li>
+				<li class="popup__link">Тверь</li>
+				<li class="popup__link">Тольятти</li>
+				<li class="popup__link">Тюмень</li>
+				<li class="popup__link">Ханты-Мансийск</li>
+				<li class="popup__link">Химки</li>
+				<li class="popup__link">Челябинск</li>
+				<li class="popup__link">Череповец</li>
+				<li class="popup__link">Электросталь</li>
+				<li class="popup__link">Юрьев-Польский</li>
+				<li class="popup__link">Ярославль</li>
 			</ul>
 		</div>
 	</div>
