--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 	<div class="popup__content">
 		<div class="popup__body popup__body_city">
 			<div class="popup__title popup__title_city">Укажите ваш регион:</div>
-			<input class="form-popup__input" id="city_choice_field" type="text" name="city_choice" placeholder="Начните вводить название вашего города">
+			<input class="form-popup__input" id="city_choice_field" type="text" name="city_choice" placeholder="Начните вводить название вашего города" autocomplete="off">
 			<p class="popup__text">или выберите:</p>
 			<ul class="popup__list">
 				<li class="popup__link">Александров</li>
